# pnc_nav2

./: .gitignore  .gitmodules  ARCHITECTURE.md  COMMIT_MSG.txt  NAV2_LEARNING_AND_IMPLEMENTATION_ROADMAP.md  README.md  me.md  simdog选包.md  start_nav.sh
archive/: me.md  review.md
docker/: Dockerfile.humble  docker-compose.yml  entrypoint.sh
docs/: phase1_验证清单.md
src/pnc_nav_bringup/: CMakeLists.txt  package.xml
src/pnc_nav_bringup/config/: nav_params.yaml
src/pnc_nav_bringup/launch/: sim_2d_bringup.launch.py  sim_3d_bringup.launch.py  turtlebot3_test.launch.py
src/pnc_nav_bringup/rviz/: nav_view.rviz
src/pnc_nav_core/: CMakeLists.txt  current_core.md  package.xml
src/pnc_nav_core/include/pnc_nav_core/: controller_base.hpp  costmap_interface.hpp  global_planner_base.hpp  local_planner_base.hpp  nav2_costmap_adapter.hpp  nav_server.hpp  path_tracker_base.hpp  simple_costmap_2d.hpp
src/pnc_nav_core/src/: nav2_costmap_adapter.cpp  nav_server.cpp  nav_server_node.cpp  simple_costmap_2d.cpp
src/pnc_nav_interfaces/: CMakeLists.txt  package.xml
src/pnc_nav_interfaces/action/: NavigateTo3DPose.action
src/pnc_nav_interfaces/msg/: JointCommands.msg  PlannerStatus.msg  RobotState.msg  TraversabilityMap.msg
src/pnc_nav_interfaces/srv/: SetMap.srv  SwitchPlanner.srv
src/pnc_nav_planners/: CMakeLists.txt  package.xml  plugins.xml
src/pnc_nav_planners/include/pnc_nav_planners/global_planners/: astar.hpp  astar_3d.hpp  rrt_star_3d.hpp
src/pnc_nav_planners/include/pnc_nav_planners/local_planners/: dwa_3d.hpp
src/pnc_nav_planners/include/pnc_nav_planners/path_trackers/: pure_pursuit_2d.hpp  pure_pursuit_3d.hpp  stanley_3d.hpp
src/pnc_nav_planners/src/global_planners/astar_3d/: astar.cpp  astar_3d.cpp
src/pnc_nav_planners/src/global_planners/rrt_star_3d/: rrt_star_3d.cpp
src/pnc_nav_planners/src/local_planners/dwa_3d/: dwa_3d.cpp
src/pnc_nav_planners/src/path_trackers/pure_pursuit_3d/: pure_pursuit_2d.cpp  pure_pursuit_3d.cpp
src/pnc_nav_planners/src/path_trackers/stanley_3d/: stanley_3d.cpp
src/pnc_nav_sim/: CMakeLists.txt  README.md  package.xml
src/pnc_nav_sim/launch/: diff_drive_sim.launch.py  go2_sim.launch.py
src/pnc_nav_sim/urdf/diff_drive/: diff_drive.urdf.xacro
src/pnc_nav_sim/urdf/unitree_go2/: go2_classic.urdf.xacro
src/pnc_nav_simulation/: CMakeLists.txt  README.md  package.xml
src/pnc_nav_simulation/launch/: diff_drive_sim.launch.py  go2_sim.launch.py  wpr_sim.launch.py
src/pnc_nav_simulation/urdf/diff_drive/: diff_drive.urdf.xacro
src/pnc_nav_simulation/urdf/sensors/: imu.urdf.xacro  livox_mid360.urdf.xacro
src/pnc_nav_simulation/urdf/unitree_go2/: go2_nav.urdf.xacro
src/pnc_nav_simulation/urdf/wpr/: wpr_nav.urdf.xacro
src/pnc_nav_simulation/worlds/: multi_floor.world  simple_maze.world
src/pnc_nav_utils/: astar_visualizer.py  costmap_editor.py  planner_tester.py  run_tool.sh
src/pnc_nav_utils/evaluation/: README.md  costmap_editor.py  costmap_obstacles.yaml  nav_evaluator.py  planner_tester.py
tools/: rs485_probe.py
