<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pnc_nav_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for PNC Nav2</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pnc_nav_core</exec_depend>
  <exec_depend>pnc_nav_interfaces</exec_depend>
  <exec_depend>pnc_nav_planners</exec_depend>
  <exec_depend>pnc_nav_control</exec_depend>
  <exec_depend>pnc_nav_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
