<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pnc_nav_sim</name>
  <version>0.1.0</version>
  <description>
    Classic-Gazebo simulation layer for PNC Nav2: navigation test worlds
    (multi_floor, simple_maze), reusable sensor xacro macros (Livox Mid360, IMU),
    a lightweight diff-drive validation robot, and a Go2 model that reuses the
    upstream go2_description meshes while driving with the classic planar_move
    plugin. Robot dynamics/locomotion are out of scope here — this package only
    provides the simulated environment + sensors that feed the pnc_nav stack.
  </description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch / model processing -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- Classic Gazebo + ROS integration (worlds, spawn, sensor/odom plugins) -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <!-- Go2 visual meshes are reused from the upstream description package -->
  <exec_depend>go2_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
